--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,21 @@
                   <br/>
                   <div class="row-fluid">
                      <div class="span3">
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6597751/" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/The Journal of Biological Database and Curation.png" alt="The Journal of Biological Database and Curation"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6597751/">Mr.Vc: a database of microarray and RNA-seq of Vibrio cholerae</a>
+                        <br/>
+                        <br/>
+                        <p>Zhiyuan Zhang, Guozhong Chen, Jun Hu, Wajid Hussain, Fenxia Fan, Yalin Yang, Zhigang Zhou,Xiaodong Fang, Jun Zhu, Wei-Hua Chen*, Zhi Liu* <br/>The Journal of Biological Database and Curation.  Vol. 2019 <br/> doi: 10.1093/database/baz069. PMID: 31231774</p>
+                        <p><b><a href="Indigenous bacteria.pdf">Download</a> </b></p>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
                         <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6592171/" class="thumbnail">
                         <img class="publications-thumb" src="thumbs/Theranostics.jpg" alt="Theranostics"/>
                         </a>
@@ -62,38 +77,11 @@
                         <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6592171/">Combination Therapy of TGF-β Blockade and Commensal-derived Probiotics Provides Enhanced Antitumor Immune Response and Tumor Suppression</a>
                         <br/>
                         <br/>
-                        <p>Shi L, Sheng J, Wang M, Luo H, Zhu J, Zhang B, Liu Z, Yang X. <br/>Theranostics. 2019 May 31;9(14):4115-4129.<br/> doi: 10.7150/thno.35131. PMID: 31281535.</p>
+                        <p>2）	Linlin Shi, Jianyong Sheng, Mengli Wang, Han Luo, Jun Zhu, Bixiang Zhang*, Zhi Liu*, Xiangliang Yang* <br/>Theranostics. 2019 May 31;9(14):4115-4129.<br/> doi: 10.7150/thno.35131. PMID: 31281535.</p>
                         <p><b><a href="Indigenous bacteria.pdf">Download</a> </b></p>
                      </div>
                   </div>
                   <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://pubs.acs.org/journal/ancac3" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/ancac3.2013.7.issue-12.largecover.jpg" alt="Orci Nulla Pellentesque Dignissim"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4>Orci Nulla Pellentesque Dignissim</h4>
-                        <br/>
-                        <p>R. Faucibus, N. Purus, J. Quis, K. Pharetra</p>
-                        <a href="https://pubs.acs.org/journal/ancac3">ACK Ipsum, 8(10), p. 233-342, 2017</a>
-                     </div>
-                  </div>
-                  <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://www.nature.com/ncomms/" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/nature-communications.jpg" alt="Duis at consectetur lorem donec"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4>Duis at consectetur lorem donec</h4>
-                        <br/>
-                        <p>H. Enim, G. Malesuada, A.R. Morbi, R.K. Tortor</p>
-                        <a href="https://www.nature.com/ncomms/">Malesuada Fames, 5:4449, 2017</a>
-                     </div>
-                  </div>
                </section>
                <hr>
                <section id="2017">
