--- a/people.html
+++ b/people.html
@@ -298,7 +298,7 @@
                         <img src="thumbs/2.jpg" alt="胡万凭"/>
                      </div>
                      <div class="span9">
-                        <p>胡万凭</p>
+                        <p>胡万平</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
