--- a/publications.html
+++ b/publications.html
@@ -38,10 +38,9 @@
          <div class="span3 bs-docs-sidebar" id="navparent">
             <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
                <li><a href="#published"> 期刊文献</a></li>
+               <li><a class="subhead" href="#2021"> 2021 </a></li>
+               <li><a class="subhead" href="#2020"> 2020 </a></li>
                <li><a class="subhead" href="#2019"> 2019 </a></li>
-               <li><a class="subhead" href="#2018"> 2018 </a></li>
-               <li><a class="subhead" href="#2017"> 2017及之前 </a></li>
-               <li><a href="#inreview"> In Review and Preparation</a></li>
             </ul>
          </div>
          <div class="span8 offset1">
@@ -49,6 +48,76 @@
                <div class="page-header">
                   <h3>期刊文献</h3>
                </div>
+               <section id="2021">
+                  <h3>2021</h3>
+                  <br/>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="http://naturescholars.com/gjmic.0201/" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/piao-paper.jpg" alt="piao-paper"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <a href="http://naturescholars.com/gjmic.0201/">Gut Microbiota and Obesity: Focus on Hormone Regulation and Appetite Control.</a>
+                        <br/>
+                        <br/>
+                        <p>Chaiwoo Park, Bei Li, Yun Deng, Linlin Shi, Wanping Hu, Guohua Lin, Zhigui Zuo, Zhi Liu. <br/>Global Journal of Microbiology, 2021; 2(1):1-16.</p>
+                        <p><b><a href="file/Gut Microbiota and Obesity： Focus on Hormone Regulation and Appetite Control..pdf">Download</a> </b></p>
+                     </div>
+                  </div>
+                  <hr>
+               </section>
+               <hr>
+               <section id="2020">
+                  <h3>2020</h3>
+                  <br/>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7542661/" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/shi-paper.jpg" alt="shi-paper"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7542661/">Combining IL-2-based immunotherapy with commensal probiotics produces enhanced antitumor immune response and tumor clearance</a>
+                        <br/>
+                        <br/>
+                        <p>Shi L, Sheng J, Chen G, Zhu P, Shi C, Li B, Park C, Wang J, Zhang B, Liu Z, Yang X. <br/>Immunother Cancer. 2020 Oct;8(2):e000973.<br/> doi: 10.1136/jitc-2020-000973. PMID: 33028692</p>
+                        <p><b><a href="file/Combining IL-2-based immunotherapy with commensal probiotics produces enhanced antitumor immune response and tumor clearance.pdf">Download</a> </b></p>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7644805/" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/qin-paper.jpg" alt="qin-paper"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7644805/">Crosstalks Between Gut Microbiota and Vibrio Cholerae</a>
+                        <br/>
+                        <br/>
+                        <p>Zixin Qin, Xiaoman Yang, Guozhong Chen, Chaiwoo Park, Zhi Liu<br/>Front Cell Infect Microbiol. 2020 Oct 23;10:582554<br/> doi: 10.3389/fcimb.2020.582554. PMID: 33194819</p>
+                        <p><b><a href="file/Crosstalks Between Gut Microbiota and Vibrio Cholerae.pdf">Download</a> </b></p>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7641908/" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/zhou-paper.jpg" alt="zhou-paper"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7641908/">Applications of Human Skin Microbiota in the Cutaneous Disorders for Ecology-Based Therapy</a>
+                        <br/>
+                        <br/>
+                        <p>Hong Zhou, Linlin Shi, Yuanyuan Ren, Xi Tan, Wei Liu, Zhi Liu* <br/>Front Cell Infect Microbiol. 2020 Oct 22;10:570261<br/> doi: 10.3389/fcimb.2020.570261. PMID: 33194808</p>
+                        <p><b><a href="file/Applications of Human Skin Microbiota in the Cutaneous Disorders for Ecology-Based Therapy.pdf">Download</a> </b></p>
+                     </div>
+                  </div>
+                  <hr>
+               </section>
+               <hr>
                <section id="2019">
                   <h3>2019</h3>
                   <br/>
@@ -63,7 +132,7 @@
                         <br/>
                         <br/>
                         <p>Zhiyuan Zhang, Guozhong Chen, Jun Hu, Wajid Hussain, Fenxia Fan, Yalin Yang, Zhigang Zhou,Xiaodong Fang, Jun Zhu, Wei-Hua Chen*, Zhi Liu* <br/>The Journal of Biological Database and Curation.  Vol. 2019 <br/> doi: 10.1093/database/baz069. PMID: 31231774</p>
-                        <p><b><a href="Indigenous bacteria.pdf">Download</a> </b></p>
+                        <p><b><a href="file/Mr.Vc  a database of microarray and RNA-seq of Vibrio cholerae.pdf">Download</a> </b></p>
                      </div>
                   </div>
                   <hr>
@@ -78,140 +147,12 @@
                         <br/>
                         <br/>
                         <p>2）	Linlin Shi, Jianyong Sheng, Mengli Wang, Han Luo, Jun Zhu, Bixiang Zhang*, Zhi Liu*, Xiangliang Yang* <br/>Theranostics. 2019 May 31;9(14):4115-4129.<br/> doi: 10.7150/thno.35131. PMID: 31281535.</p>
-                        <p><b><a href="Indigenous bacteria.pdf">Download</a> </b></p>
+                        <p><b><a href="file/Combination Therapy of TGF-β Blockade and Commensal-derived Probiotics Provides Enhanced Antitumor Immune Response and Tumor Suppression.pdf">Download</a> </b></p>
                      </div>
                   </div>
                   <hr>
                </section>
                <hr>
-               <section id="2017">
-                  <h3>2017</h3>
-                  <br/>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://pubs.acs.org/journal/ancac3" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/ancac3.2013.7.issue-12.largecover.jpg" alt="Orci Nulla Pellentesque Dignissim"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4>Orci Nulla Pellentesque Dignissim</h4>
-                        <br/>
-                        <p>R. Faucibus, N. Purus, J. Quis, K. Pharetra</p>
-                        <a href="https://pubs.acs.org/journal/ancac3">ACK Ipsum, 8(10), p. 233-342, 2017</a>
-                     </div>
-                  </div>
-                  <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://pubs.acs.org/journal/nalefd" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/nanoletters.2013.13.issue1.jpg" alt="Pellentesque Morbi Tristique Senectus Et"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4>Pellentesque Morbi Tristique Senectus Et</h4>
-                        <br/>
-                        <p>Q.E. Vulputate , E.R. Dictum, E.J. Pellentesque</p>
-                        <a href="https://pubs.acs.org/journal/nalefd">Pellentesque Morbi, 2017</a>
-                     </div>
-                  </div>
-                  <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://aip.scitation.org/journal/apl" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/105_1.jpg" alt="Tellus molestie nunc non blandit massa"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4>Tellus molestie nunc non blandit massa</h4>
-                        <br/>
-                        <p>N. Placerat, R.J. Molestie, R. Mollis, E.K. Tellus</p>
-                        <a href="https://aip.scitation.org/journal/apl">Urna Neque Viverra, 105(1), 013111, 2017</a>
-                     </div>
-                  </div>
-                  <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://www.nature.com/ncomms/" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/nature-communications.jpg" alt="Duis at consectetur lorem donec"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4>Duis at consectetur lorem donec</h4>
-                        <br/>
-                        <p>H. Enim, G. Malesuada, A.R. Morbi, R.K. Tortor</p>
-                        <a href="https://www.nature.com/ncomms/">Malesuada Fames, 5:4449, 2017</a>
-                     </div>
-                  </div>
-               </section>
-               <hr>
-               <section id="2016">
-                  <h3>2016</h3>
-                  <br/>            
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://pubs.acs.org/journal/ancac3" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/ancac3.2013.7.issue-12.largecover.jpg" alt="Orci Nulla Pellentesque Dignissim"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4>Orci Nulla Pellentesque Dignissim</h4>
-                        <br/>
-                        <p>R. Faucibus, N. Purus, J. Quis, K. Pharetra</p>
-                        <a href="https://pubs.acs.org/journal/ancac3">ACK Ipsum, 8(10), p. 233-342, 2016</a>
-                     </div>
-                  </div>
-                  <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://pubs.acs.org/journal/nalefd" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/nanoletters.2013.13.issue1.jpg" alt="Pellentesque Morbi Tristique Senectus Et"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4>Pellentesque Morbi Tristique Senectus Et</h4>
-                        <br/>
-                        <p>Q.E. Vulputate , E.R. Dictum, E.J. Pellentesque</p>
-                        <a href="https://pubs.acs.org/journal/nalefd">Pellentesque Morbi, 2016</a>
-                     </div>
-                  </div>
-                  <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://aip.scitation.org/journal/apl" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/105_1.jpg" alt="Tellus molestie nunc non blandit massa"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4>Tellus molestie nunc non blandit massa</h4>
-                        <br/>
-                        <p>N. Placerat, R.J. Molestie, R. Mollis, E.K. Tellus</p>
-                        <a href="https://aip.scitation.org/journal/apl">Urna Neque Viverra, 105(1), 013111, 2016</a>
-                     </div>
-                  </div>
-                  <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://www.nature.com/ncomms/" class="thumbnail">
-                        <img class="publications-thumb" src="thumbs/nature-communications.jpg" alt="Duis at consectetur lorem donec"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4>Duis at consectetur lorem donec</h4>
-                        <br/>
-                        <p>H. Enim, G. Malesuada, A.R. Morbi, R.K. Tortor</p>
-                        <a href="https://www.nature.com/ncomms/">Malesuada Fames, 5:4449, 2016</a>
-                     </div>
-                  </div>
-               </section>
-            </section>
-            <hr>
-            <section id="inreview">
-               <div class="page-header">
-                  <h3>In Review and Preperation</h3>
-               </div>
-               <ol>
-                  <li class="publication">XXX</li>
-               </ol>
             </section>
             <hr>
          </div>
