--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Contact</title>
+      <title>联系我们</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Zhaohui Qin's Lab, Contact, Emory University">
+      <meta name="description" content="Liu Lab,Contact,HUST">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -24,10 +24,10 @@
                         <li><a href="index.html">主页</a></li>
                         <li><a href="people.html">成员</a></li>
                         <li><a href="research.html">研究</a></li>
-			<li><a href="publications.html">发表文献</a></li>
-			<li><a href="gallery.html">风采</a></li>
-         <li><a href="software.html">常用链接</a></li>
-         <li><a href="teaching.html">实验室资源</a></li>
+			               <li><a href="publications.html">发表文献</a></li>
+			               <li><a href="gallery.html">风采</a></li>
+                        <li><a href="software.html">常用链接</a></li>
+                        <li><a href="teaching.html">实验室资源</a></li>
                         <li class="active" ><a href="#">联系我们</a></li>
                      </ul>
                   </div>
