--- a/gallery.html
+++ b/gallery.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Gallery</title>
+      <title>风采</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Zhaohui Qin's Lab, Gallery, Emory University">
+      <meta name="description" content="Liu Lab,Gallery,HUST">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -22,14 +22,14 @@
                <div class="navbar-inner">
                   <div class="container">
                      <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="people.html">People</a></li>
-                        <li><a href="research.html">Research</a></li>
-                        <li><a href="publications.html">Publications</a></li>
-                        <li class="active"><a href="gallery.html">Gallery</a></li>
-			<li><a href="software.html">Software</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
-			<li><a href="contact.html">Join Us</a></li>
+                        <li><a href="index.html">主页</a></li>
+                        <li><a href="people.html">成员</a></li>
+                        <li><a href="research.html">研究</a></li>
+                        <li><a href="publications.html">发表文献</a></li>
+                        <li class="active"><a href="gallery.html">风采</a></li>
+                        <li><a href="software.html">常用链接</a></li>
+                        <li><a href="teaching.html">实验室资源</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
                      </ul>
                   </div>
                </div>
@@ -38,7 +38,7 @@
          <hr>
          <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
             <div class="slides"></div>
-            <h3 class="title"> Gallery </h3>
+            <h3 class="title"> 风采 </h3>
             <a class="prev">‹</a>
             <a class="next">›</a>
             <a class="close">×</a>
@@ -48,34 +48,34 @@
          <div class="row-fluid">
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
-                  <li><a href="#imagegallery1"> Lab pictures </a></li>
-                  <li><a href="#imagegallery2"> Volunteers </a></li>
+                  <li><a href="#imagegallery1"> 实验室照片 </a></li>
+                  <li><a href="#imagegallery2"> 活动合照 </a></li>
                </ul>
             </div>
             <div class="span8 offset1">
                <section id="imagegallery1">
                   <div class="page-header">
-                     <h3>Lab pictures</h3>
+                     <h3>实验室照片</h3>
                   </div>
                   <div class="row-fluid">
                      <ul class="thumbnails da-thumbs">
                         <li class="span4">
-                           <a title="Xiaobo Sun Graduation"  href="images/Xiaobo_Sun_Graduation.JPG" class="thumbnail" >
-                           <img alt="" src="images/Xiaobo_Sun_Graduation.JPG" style="width: 125px; height: 187px;">            
+                           <a title="厌氧工作平台"  href="images/yanyang-lab.jpg" class="thumbnail" >
+                           <img alt="" src="images/yanyang-lab.jpg" style="width: 125px; height: 187px;">            
                            </a>
-                           <p class="caption"> Xiaobo Sun Graduation </p>
+                           <p class="caption"> 厌氧工作平台 </p>
                         </li>
                         <li class="span4">
-                           <a title="group_photo_2018.jpg" href="images/group_photo_2018.jpg" class="thumbnail" >
-                           <img alt="" src="images/group_photo_2018.jpg" style="width: 187px; height: 125px;">
+                           <a title="培养组学平台" href="images/peiyangzuxue.jpg" class="thumbnail" >
+                           <img alt="" src="images/peiyangzuxue.jpg" style="width: 187px; height: 125px;">
                            </a>
-                           <p class="caption"> Group Photo 2018 </p>
+                           <p class="caption"> 培养组学平台 </p>
                         </li>
                         <li class="span4">
-                           <a title="group_photo_2019.jpg" href="images/group_photo_2019.jpg" class="thumbnail" >
-                           <img alt="" src="images/group_photo_2019.jpg" style="width: 187px; height: 125px;">
+                           <a title="自动分选平台" href="images/fenxuan.jpg" class="thumbnail" >
+                           <img alt="" src="images/fenxuan.jpg" style="width: 187px; height: 125px;">
                            </a>
-                           <p class="caption"> Group Photo 2019 </p>
+                           <p class="caption"> 自动分选平台 </p>
                         </li>
                      </ul>
                   </div>
