--- a/software.html
+++ b/software.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Software</title>
+      <title>常用链接</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Zhaohui Qin's Lab, News, Emory University">
+      <meta name="description" content="Liu Lab,links,HUST">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,14 +20,14 @@
                <div class="navbar-inner">
                   <div class="container">
                      <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="people.html">People</a></li>
-                        <li><a href="research.html">Research</a></li>
-                        <li><a href="publications.html">Publications</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li class="active"><a href="#">Software</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
-			<li><a href="contact.html">Join Us</a></li>
+                        <li><a href="index.html">主页</a></li>
+                        <li><a href="people.html">成员</a></li>
+                        <li><a href="research.html">研究</a></li>
+                        <li><a href="publications.html">发表文献</a></li>
+                        <li><a href="gallery.html">风采</a></li>
+                        <li class="active"><a href="#">常用链接</a></li>
+                        <li><a href="teaching.html">实验室资源</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
                      </ul>
                   </div>
                </div>
