--- a/gallery.html
+++ b/gallery.html
@@ -39,9 +39,9 @@
          <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
             <div class="slides"></div>
             <h3 class="title"> 风采 </h3>
-            <a class="prev">‹</a>
-            <a class="next">›</a>
-            <a class="close">×</a>
+            <a class="prev"></a>
+            <a class="next"></a>
+            <a class="close"></a>
             <a class="play-pause"></a>
             <ol class="indicator"></ol>
          </div>
@@ -82,30 +82,40 @@
                </section>
                <section id="imagegallery2">
                   <div class="page-header">
-                     <h3>Volunteers</h3>
+                     <h3>活动合照</h3>
                   </div>
                   <div class="row-fluid">
                      <ul class="thumbnails da-thumbs">
                         <li class="span4">
-                           <a title="Renfroe Middle School Math Club_2019"  href="images/Renfroe_Middle_School_Math_Club_2019.jpeg" class="thumbnail" >
-                           <img alt="" src="images/Renfroe_Middle_School_Math_Club_2019.jpeg" style="width: 187px; height: 125px;">            
+                           <a title="集体生日庆祝"  href="images/微信图片_20210107172600.jpg" class="thumbnail" >
+                           <img alt="" src="images/微信图片_20210107172600.jpg" style="width: 187px; height: 125px;">            
                            </a>
-                           <p class="caption"> Renfroe Middle School Math Club 2019 </p>
-                        </li>
-                        <!--
-                        <li class="span4">
-                           <a title="Varius duis at consectetur lorem donec massa." href="images/arlington-research.jpg" class="thumbnail" >
-                           <img alt="" src="images/arlington-research.jpg" style="width: 187px; height: 125px;">
-                           </a>
-                           <p class="caption"> Varius duis at consectetur lorem donec massa </p>
+                           <p class="caption"> 集体生日庆祝 </p>
                         </li>
                         <li class="span4">
-                           <a title="Tortor vitae purus 2018." href="images/lab-room.jpg" class="thumbnail" >
-                           <img alt="" src="images/lab-room.jpg" style="width: 187px; height: 125px;">
+                           <a title="集体生日庆祝"  href="images/微信图片_20210107185006.jpg" class="thumbnail" >
+                           <img alt="" src="images/微信图片_20210107185006.jpg" style="width: 187px; height: 125px;">            
                            </a>
-                           <p class="caption"> Tortor vitae purus 2018 </p>
+                           <p class="caption"> 集体生日庆祝 </p>
                         </li>
-                        -->
+                        <li class="span4">
+                           <a title="集体生日庆祝"  href="images/微信图片_20210107185321.jpg" class="thumbnail" >
+                           <img alt="" src="images/微信图片_20210107185321.jpg" style="width: 187px; height: 125px;">            
+                           </a>
+                           <p class="caption"> 集体生日庆祝 </p>
+                        </li>
+                        <li class="span4">
+                           <a title="集体出游"  href="images/微信图片_20210107185326.jpg" class="thumbnail" >
+                           <img alt="" src="images/微信图片_20210107185326.jpg" style="width: 187px; height: 125px;">            
+                           </a>
+                           <p class="caption"> 集体出游 </p>
+                        </li>
+                        <li class="span4">
+                           <a title="集体出游"  href="images/微信图片_20210107185331.jpg" class="thumbnail" >
+                           <img alt="" src="images/微信图片_20210107185331.jpg" style="width: 187px; height: 125px;">            
+                           </a>
+                           <p class="caption"> 集体出游 </p>
+                        </li>
                      </ul>
                   </div>
                </section>
