--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,8 @@
             <div class="span12 content">
                <div class="row-fluid">
                   <div class="span8">
-		    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1657.7870551038193!2d-84.3242774!3d33.7974946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f506f79fac5b37%3A0x657cc5514cde4e27!2s1518%20Clifton%20Rd%2C%20Druid%20Hills%2C%20GA%2030329!5e0!3m2!1sen!2sus!4v1576460740016!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>-->
+                     <img alt="" src="images/israel-palacio-778505-unsplash.jpg" style="width: 600px; height: 450px;">
+		    <!--<iframe src=""  width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>-->
                   </div>
                   <div class="span4">
                      <div class="box_cont">
