--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             <div class="span12 content">
                <div class="row-fluid">
                   <div class="span8">
-                     <img alt="" src="images/israel-palacio-778505-unsplash.jpg" style="width: 600px; height: 450px;">
+                     <img alt="" src="images/map.jpg" style="width: 600px; height: 450px;">
 		    <!--<iframe src=""  width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>-->
                   </div>
                   <div class="span4">
