--- a/software.html
+++ b/software.html
@@ -34,74 +34,15 @@
             </div>
          </div>
          <hr>
-         <!--
-         <div id="media">
-            <div class="row-fluid post_row">
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="https://mitei.mit.edu">Lorem ipsum dolor sit amet: Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</a></h5>
-                     <br/>
-                     <span class="date">January 11, 2018</span>
-                  </div>
-                  <div class="img">
-                     <a href="https://mitei.mit.edu">
-                     <img src="images/envmonitor2.png" alt="Lorem ipsum dolor sit amet: Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-                  </div>
-                  <div class="author_box">
-                     <h6>Daniel SD</h6>
-                  </div>
-               </div>
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="http://web.mit.edu">Eget Nulla: Posuere urna nec tincidunt praesent. Egestas sed sed risus pretium quam.</a></h5>
-                     <br/>
-                     <span class="date">January 4, 2018</span>                        
-                  </div>
-                  <div class="img">
-                     <a href="http://web.mit.edu">
-                     <img src="images/mit-spotlight1.png" alt="Eget Nulla: Posuere urna nec tincidunt praesent. Egestas sed sed risus pretium quam.">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p>Commodo ullamcorper a lacus vestibulum sed arcu non. Neque aliquam vestibulum morbi blandit cursus risus at ultrices mi. </p>
-                     <br/>
-                     <br/>
-                  </div>
-                  <div class="author_box">
-                     <h6>Alissa L. Jacque</h6>
-                  </div>
-               </div>
-            </div>
-         </div>
-         -->
          <div class="row-fluid">
             <div class="span12">
-            <h3>Software Developed</h3>
+            <h3>常用链接</h3>
             <ul>
-                <li><b>EM-DeCODER</b> (haplotype phasing using EM algorithm).</li>
-                <li><b>HAPLOTYPER</b> (haplotype phasing using Partition-Ligation and Gibbs Sampler).</li>
-                <li><b>PL-EM</b> (haplotype phasing using Partition-Ligation and EM algorithm).</li>
-                <li><b>BMC</b> (putative binding motif clustering using Gibbs Sampler).</li>
-                <li><b>FESTA</b> (tagSNP selection based on pairwise LD) With Shyam Gopalakrishnan.</li>
-                <li><b>tripleM</b> (PL-EM for phasing trios).</li>
-                <li><b>CRC</b> (model-based clustering algorithm for gene expression microarray data).</li>
-                <li><b>OperonHMM</b> (a hidden Markov model for predicting operon structure using only sequence data). Codeveloped with Dr. Nick Bergman.</li>
-                <li><b>CRCView</b> (point-and-click web server for clustering, visualizing and interpreting microarray gene expression data). Co-developed with Zuoshuang Xiang and Yongqun He.</li>
-                <li><b>BEST</b> (query large scale microarray compendium datasets using model-based Bayesian approach with variable selection). Developed by Ming Hu.</li>
-                <li><b>HPeak</b> (A hidden Markov model-based algorithm for calling ChIP-enriched peaks using ChIP-seq data).</li>
-                <li><b>ChIP-meta</b> (hierarchical hidden Markov model-based algorithm for inferring ChIP-enriched regions using both ChIP-seq and ChIP-chip data). Developed by Hyung Won Choi.</li>
-                <li><b>HMS</b> (a hybrid Monte Carlo-based de nono motif discovery tool designed specifically for analyzing ChIP-Seq data). Developed by Ming Hu.</li>
-                <li><b>POME</b> (Poisson mixed-effects model for quantification expression in RNA-Seq data). Developed by Ming Hu in collaboration with Michael Yu Zhu.</li>
-                <li><b>GPUmotif</b> (de novo motif finding and motif scan using GPU). Developed by Pooya Zandevakili.</li>
-                <li><b>Methylphet</b> (predict TF binding in vivo from base-level methylome profiling data). Developed by Tianlei Xu, Ben Li and Meng Zhao.</li>
-                <li><b>RefEditor</b> (customize reference genome using individual’s known mutation profile). Developed by Shuai Yuan.</li>
-                <li><b>IPBT</b> (detect differentially expressed genes with informative prior obtained from historical data). Developed by Ben Li.</li>
-                <li><b>traseR</b> (to perform trait associated SNP enrichment analysis). Developed by Li Chen.</li>
-                <li><b>DIVAN</b> (provide disease-specific annotation on nonocoding variants using epigenomcis profiles). Developed by Li Chen.</li>
+               <li><b><a href="http://life.hust.edu.cn/">生命科学与技术学院官网</a></li>
+               <li><b><a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a></li>
+               <li><b><a href="https://www.cnki.net/">中国知网</a></li>
+               <li><b><a href="http://s.ilab.cn/login.jsp">iLab订购平台</a></li>
+               <li><b><a href="http://life.hust.edu.cn/">生命科学与技术学院官网</a></li>
             </ul>
             </div>
          </div>
