--- a/software.html
+++ b/software.html
@@ -38,10 +38,12 @@
             <div class="span12">
             <h3>常用链接</h3>
             <ul>
+               <h5>学校网站</h5>
                <li><b><a href="http://life.hust.edu.cn/">生命科学与技术学院官网</a></li>
                <li><b><a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a></li>
                <li><b><a href="https://www.cnki.net/">中国知网</a></li>
                <li><b><a href="http://s.ilab.cn/login.jsp">iLab订购平台</a></li>
+               <h5>学术平台</h5>
                <li><b><a href="http://life.hust.edu.cn/">生命科学与技术学院官网</a></li>
             </ul>
             </div>
