--- a/software.html
+++ b/software.html
@@ -39,12 +39,25 @@
             <h3>常用链接</h3>
             <ul>
                <h5>学校网站</h5>
+               <li><b><a href="https://www.hust.edu.cn/">华中科技大学官网</a></li>
                <li><b><a href="http://life.hust.edu.cn/">生命科学与技术学院官网</a></li>
-               <li><b><a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a></li>
-               <li><b><a href="https://www.cnki.net/">中国知网</a></li>
-               <li><b><a href="http://s.ilab.cn/login.jsp">iLab订购平台</a></li>
+               <li><b><a href="http://gs.hust.edu.cn/">华中科技大学研究生院官网</a></li>
+               <li><b><a href="http://software.hust.edu.cn/"></a>正版软件服务平台</li>
+               <li><b><a href="http://ncc.hust.edu.cn/jgfw/VPN.htm">校园网VPN服务价绍</a></li>
+               <li><b><a href="http://www.lib.hust.edu.cn/">华中科技大学图书馆</a></li>
                <h5>学术平台</h5>
-               <li><b><a href="http://life.hust.edu.cn/">生命科学与技术学院官网</a></li>
+               <li><b><a href="https://www.cnki.net/">中国知网</a></li>
+               <li><b><a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a></li>
+               <li><b><a href="https://onlinelibrary.wiley.com/">Wiley online library</a></li>
+               <h5>常用订购网站</h5>  
+               <li><b><a href="http://s.ilab.cn/login.jsp">iLab订购平台</a></li>
+               <li><b><a href="https://www.sangon.com/">生工生物</a></li>
+               <li><b><a href="http://www.solarbio.com/">索莱宝</a></li>
+               <li><b><a href="http://www.cell-nest.com/">无锡nest</a></li>
+               <h5>常用数据库</h5>
+               <li><b><a href="https://www.ncbi.nlm.nih.gov/">NCBI</a></li>
+               <li><b><a href="https://www.genome.jp/kegg/">KEGG</a></li>
+               <li><b><a href="https://www.uniprot.org/">Uniprot</a></li>
             </ul>
             </div>
          </div>
