--- a/software.html
+++ b/software.html
@@ -42,8 +42,7 @@
                <li><b><a href="https://www.hust.edu.cn/">华中科技大学官网</a></li>
                <li><b><a href="http://life.hust.edu.cn/">生命科学与技术学院官网</a></li>
                <li><b><a href="http://gs.hust.edu.cn/">华中科技大学研究生院官网</a></li>
-               <li><b><a href="http://software.hust.edu.cn/"></a>正版软件服务平台</li>
-               <li><b><a href="http://ncc.hust.edu.cn/jgfw/VPN.htm">校园网VPN服务价绍</a></li>
+               <li><b><a href="http://ncc.hust.edu.cn/jgfw/VPN.htm">校园网VPN服务</a></li>
                <li><b><a href="http://www.lib.hust.edu.cn/">华中科技大学图书馆</a></li>
                <h5>学术平台</h5>
                <li><b><a href="https://www.cnki.net/">中国知网</a></li>
