--- a/teaching.html
+++ b/teaching.html
@@ -34,34 +34,14 @@
             </div>
          </div>
          <hr>
-         <div class="row-fluid">
-            <div class="span3 bs-docs-sidebar" id="navparent">
-               <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
-                  <li><a href="#BIOS738"> BIOS 738: Bayesian&Empirical Bayes Meth</a></li>
-                  <li><a href="#BIOS795R"> BIOS 795R: Pre-Candidacy Research</a></li>
-               </ul>
-            </div>
-            <div class="span8 offset1">
-               <section id="BIOS738">
-                  <div class="page-header">
-                     <h3><a href="">BIOS 738: Bayesian&Empirical Bayes Meth</a></h3>
-                     <hr>
-                     <p>Includes Bayesian approaches to statistical inference, point and interval estimation using Bayesian and empirical Bayesian methods, representation of beliefs, estimation of the prior distribution, robustness to choice of priors, conjugate analysis, reference analysis, comparison with alternative methods of inference, computational approaches, including Laplace approximation, iterative quadrature, importance sampling, and Markov Chain Monte Carlo (Gibbs sampling). Various applications such as small area estimation, clinical trials and other biomedical applications will be used as examples </p>
-                     <p><b>Prerequisite: </b><b>BIOS 510</b> and <b>BIOS 511</b>.</p>
-                     <p><b>Semesters Taught:</b> Fall 2018.</p>
-                  </div>
-               </section>
-               <section id="BIOS795R">
-                  <div class="page-header">
-                     <h3><a href="">BIOS 795R: Pre-Candidacy Research</a></h3>
-                     <hr>
-                     <p>Research pertaining to a dissertation and preparing for the proposal.</p>
-                     <p><b>Semesters Taught:</b> Every Fall and Spring.</p>
-                  </div>
-               </section>
-            </div>
+         <div class="span9">
+            <p><b><a href="resources/Zane's Strain HUST 04222019.fp7">菌株列表</a> </b></p>
+            <p><b><a href="resources/vectors.zip">质粒库</a> </b></p>
+            <p><b><a href="resources/plasmid construction zane.zip">已构建质粒库</a> </b></p>
+            <p><b><a href="resources/方案/"> 常用实验方案合集 </a> </b></p>
          </div>
       </div>
+
       <footer id="footer">
       </footer>
 
