--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@
             <p><b><a href="resources/Zane's Strain HUST 04222019.fp7">菌株列表</a> </b></p>
             <p><b><a href="resources/vectors.zip">质粒库</a> </b></p>
             <p><b><a href="resources/plasmid construction zane.zip">已构建质粒库</a> </b></p>
-            <p><b><a href="resources/方案/"> 常用实验方案合集 </a> </b></p>
+            <p><b><a href="resources/方案.zip"> 常用实验方案合集 </a> </b></p>
          </div>
       </div>
 
