--- a/teaching.html
+++ b/teaching.html
@@ -35,7 +35,7 @@
          </div>
          <hr>
          <div class="span6">
-            <p><b><a href="resources/Zane's Strain HUST 04222019.fp7">菌株列表</a> </b></p>
+            <h4><p><b><a href="resources/Zane's Strain HUST 04222019.fp7">菌株列表</a> </b></p></h4>
             <h5>常用数据库</h5>
             <p><b><a href="resources/vectors.zip">质粒库</a> </b></p>
             <p><b><a href="resources/plasmid construction zane.zip">已构建质粒库</a> </b></p>
