--- a/teaching.html
+++ b/teaching.html
@@ -37,9 +37,9 @@
          <div class="span6">
             <h4><p><b><a href="resources/Zane's Strain HUST 04222019.fp7">菌株列表</a> </b></p></h4>
             <h5>常用数据库</h5>
-            <p><b><a href="resources/vectors.zip">质粒库</a> </b></p>
-            <p><b><a href="resources/plasmid construction zane.zip">已构建质粒库</a> </b></p>
-            <p><b><a href="resources/方案.zip"> 常用实验方案合集 </a> </b></p>
+            </h4><p><b><a href="resources/vectors.zip">质粒库</a> </b></p></h4>
+            </h4><p><b><a href="resources/plasmid construction zane.zip">已构建质粒库</a> </b></p></h4>
+            </h4><p><b><a href="resources/方案.zip"> 常用实验方案合集 </a> </b></p></h4>
          </div>
       </div>
 
