--- a/contact.html
+++ b/contact.html
@@ -46,14 +46,14 @@
                <div class="row-fluid">
                   <div class="span8">
                      <img alt="" src="images/map.jpg" style="width: 600px; height: 450px;">
-		    <!--<iframe src=""  width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>-->
+		    <!--<iframe src=""  width="600" height="370" frameborder="0" style="border:0;" allowfullscreen=""></iframe>-->
                   </div>
                   <div class="span4">
                      <div class="box_cont">
                         <h4>地址</h4>
 			<p>中国湖北省武汉市<br>
 			   洪山区高新大道666号<br>
-			   光谷生物城C4<br>
+			   光谷生物城C4-5楼<br>
                         </p>
 			<a href="https://map.baidu.com/search/%E5%85%89%E8%B0%B7%E7%94%9F%E7%89%A9%E5%9F%8E/@12744945.19314578,3544514.1,14.65z?querytype=s&da_src=shareurl&wd=%E5%85%89%E8%B0%B7%E7%94%9F%E7%89%A9%E5%9F%8E&c=218&src=0&pn=0&sug=0&l=13&b=(12721778.71143822,3542946.6939621842;12752820.586720351,3556964.040769272)&from=webmap&biz_forward=%7B%22scaler%22:2,%22styles%22:%22pl%22%7D&device_ratio=2">地图</a>
                         <hr>
