--- a/software.html
+++ b/software.html
@@ -59,6 +59,9 @@
                <li><b><a href="https://www.uniprot.org/">Uniprot</a></li>
             </ul>
             </div>
+            <div class="span8">
+               <img alt="" src="images/map.jpg" style="width: 600px; height: 450px;">
+            </div>
          </div>
       </div>
       <footer id="footer">
