--- a/people.html
+++ b/people.html
@@ -315,7 +315,7 @@
                     <p>XXX</p>
                     <p>XXX</p>
 
-                    <h4>master Students</h4>
+                    <h4>Master Students</h4>
                     <p>钱明杰</p>
                     <p>章志远</p>
                     <p>Wajid</p>
