--- a/teaching.html
+++ b/teaching.html
@@ -36,11 +36,17 @@
          <hr>
          <div class="span6">
             <h4><p><b><a href="resources/Zane's Strain HUST 04222019.fp7">菌株列表</a> </b></p></h4>
-            <h5>包含实验室现有菌株，均冻存于-80℃的菌种库中。如实验有需要用到，应向专门的负责人申请接种。一次接种后，需自行保种，禁止频繁到菌种库转接。</h5><br/>
+            <h5>包含实验室现有菌株，均冻存于-80℃的菌种库中。如实验有需要用到，应向专门的负责人申请接种。一次接种后，需自行保种，禁止频繁到菌种库转接。</h5>
+            <br/>
+            <br/>
             <h4><p><b><a href="resources/vectors.zip">质粒库</a> </b></p></h4>
-            <h5>包含实验室现有的质粒列表及图谱</h5><br/>
+            <h5>包含实验室现有的质粒列表及图谱</h5>
+            <br/>
+            <br/>
             <h4><p><b><a href="resources/plasmid construction zane.zip">已构建质粒库</a> </b></p></h4>
-            <h5>经过改造后的质粒列表及图谱，包含带有高表达启动子、包含报告基因等常用的工具质粒</h5><br/>
+            <h5>经过改造后的质粒列表及图谱，包含带有高表达启动子、包含报告基因等常用的工具质粒</h5>
+            <br/>
+            <br/>
             <h4><p><b><a href="resources/方案.zip"> 常用实验方案合集 </a> </b></p></h4>
          </div>
       </div>
