--- a/software.html
+++ b/software.html
@@ -57,6 +57,9 @@
                <li><b><a href="https://www.ncbi.nlm.nih.gov/">NCBI</a></li>
                <li><b><a href="https://www.genome.jp/kegg/">KEGG</a></li>
                <li><b><a href="https://www.uniprot.org/">Uniprot</a></li>
+               <div class="span8">
+                  <img src="images/map.jpg" style="width: 550px; height: 450px; class="float-right/>">
+                  </div>
             </ul>
             </div>
          </div>
