--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          <div class="container-fluid">
             <div class="row-fluid marketing">
                <div class="span12">
-                  <p style="font-size:18px; line-height=28px">
+                  <p style="font-size:18px; line-height:28px">
                   课题组长期从事微生物学研究，在微生物信号交流和肠道微生物与宿主互作领域做出了系列标志性成绩，获美国国立卫生研究院R21和R01，中国“杰出青年”基金，“青年千人”，国家973课题、国家重点研发计划、自然科学基金等项目资助。<br/> 
                   <br/><br/>
                   到目前为止主要研究方向：微生物与宿主动物的相互作用。宿主动物肠道环境中具有10倍于宿主细胞数量的微生物，其中包括益生菌、病原菌、条件致病菌等，这些微生物共同作用，参与宿主健康和疾病的调控。<br/>
