--- a/software.html
+++ b/software.html
@@ -34,7 +34,7 @@
             </div>
          </div>
          <hr>
-         <div class="row-fluid">
+         <div class="span8 offset1">
             <div class="span12">
             <h3>常用链接</h3>
             <ul>
@@ -57,10 +57,8 @@
                <li><b><a href="https://www.ncbi.nlm.nih.gov/">NCBI</a></li>
                <li><b><a href="https://www.genome.jp/kegg/">KEGG</a></li>
                <li><b><a href="https://www.uniprot.org/">Uniprot</a></li>
-               <div class="span8">
-                  <img src="images/map.jpg" style="width: 550px; height: 450px; class="float-right/>">
-                  </div>
             </ul>
+            <img src="images/map.jpg" class="float-right"/>
             </div>
          </div>
       </div>
