--- a/research.html
+++ b/research.html
@@ -67,7 +67,7 @@
                         <section id="content1">
                            <h4>研究方向</h4>
                            <br/>
-                           <img src="images/.jpg" class="float-right" alt="Pathogen"/>
+                           <img src="images/map.jpg" class="float-right" alt="Pathogen"/>
                            <p>
                              病原菌是研究 
                            </p>
