--- a/software.html
+++ b/software.html
@@ -35,6 +35,7 @@
          </div>
          <hr>
          <div class="span8 offset1">
+            <div class="row-fluid">
             <div class="span12">
             <h3>常用链接</h3>
             <ul>
@@ -59,6 +60,7 @@
                <li><b><a href="https://www.uniprot.org/">Uniprot</a></li>
             </ul>
             <img src="images/map.jpg" class="float-right"/>
+            </div>
             </div>
          </div>
       </div>
