--- a/research.html
+++ b/research.html
@@ -73,7 +73,7 @@
                            <p>
                              目前已经 
                            </p>
-                           <img src="images/map.jpg" class="float-right" alt="Pathogen"/>
+                           <img src="images/.jpg" class="float-right" alt="Pathogen"/>
                         </section>
                         <hr>
                      </div>
