--- a/software.html
+++ b/software.html
@@ -59,7 +59,7 @@
                <li><b><a href="https://www.genome.jp/kegg/">KEGG</a></li>
                <li><b><a href="https://www.uniprot.org/">Uniprot</a></li>
             </ul>
-            <img src="images/map.jpg" class="float-right"/>
+            <img src="images/map.jpg" class="float-right1"/>
             </div>
             </div>
          </div>
