--- a/software.html
+++ b/software.html
@@ -36,7 +36,7 @@
          <hr>
          <div class="span8 offset1">
             <div class="row-fluid">
-            <div class="span12">
+            <div class="span9">
             <h3>常用链接</h3>
             <ul>
                <h5>学校网站</h5>
@@ -59,7 +59,7 @@
                <li><b><a href="https://www.genome.jp/kegg/">KEGG</a></li>
                <li><b><a href="https://www.uniprot.org/">Uniprot</a></li>
             </ul>
-            <img src="images/map.jpg" class="float-right1"/>
+            <img src="images/map.jpg" class="span3"/>
             </div>
             </div>
          </div>
