--- a/software.html
+++ b/software.html
@@ -34,7 +34,7 @@
             </div>
          </div>
          <hr>
-         <div class="span8 offset1">
+         <div class="span8">
             <h3>常用链接</h3>
             <ul>
                <h5>学校网站</h5>
@@ -56,8 +56,8 @@
                <li><b><a href="https://www.ncbi.nlm.nih.gov/">NCBI</a></li>
                <li><b><a href="https://www.genome.jp/kegg/">KEGG</a></li>
                <li><b><a href="https://www.uniprot.org/">Uniprot</a></li>
+               <img src="images/map.jpg" class="float-right1"/>
             </ul>
-            <img src="images/map.jpg" class="span3"/>
          </div>
       </div>
       <footer id="footer">
