--- a/software.html
+++ b/software.html
@@ -34,7 +34,7 @@
             </div>
          </div>
          <hr>
-         <div class="span8">
+         <div class="float-left">
             <h3>常用链接</h3>
             <ul>
                <h5>学校网站</h5>
@@ -58,7 +58,7 @@
                <li><b><a href="https://www.uniprot.org/">Uniprot</a></li>
             <ul>
          </div>
-         <img src="images/map.jpg" class="float-right1"/>
+         <img src="images/map.jpg" class="float-right"/>
       </div>
       <footer id="footer">
       </footer>
