--- a/software.html
+++ b/software.html
@@ -58,7 +58,9 @@
                <li><b><a href="https://www.uniprot.org/">Uniprot</a></li>
             <ul>
          </div>
-         <img src="images/map.jpg" class="float-right"/>
+         <div class="float-right">
+            <img src="images/map.jpg" class="float-right"/>
+         </div>
       </div>
       <footer id="footer">
       </footer>
