--- a/software.html
+++ b/software.html
@@ -59,7 +59,7 @@
             <ul>
          </div>
          <div class="float-right">
-            <img src="images/map.jpg" class="float-right"/>
+            <img src="images/map.jpg" class="float-right1"/>
          </div>
       </div>
       <footer id="footer">
