--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <p class="lead">  HUST </p>
             <h1>肠道微生物实验室</h1>
          </header>
-         <!-- navigation bar -->
          <div class="masthead">
             <div class="navbar">
                <div class="navbar-inner">
@@ -36,6 +35,38 @@
                </div>
             </div>
          </div>
+         <div class="row-fluid">
+            <div class="span12">
+               <div id="main-carousel" class="carousel slide">
+                  <div class="carousel-inner">
+                     <div class="item active">
+                        <img src="images/ani-kolleshi-crop3.JPG" class="carousel-image" alt="">                      
+                        <div class="carousel-caption">
+                           <h4>Welcome to the Velit Aliquet Sagittis University Research Laboratory</h4>
+                           <!-- -->
+                           <p></p>
+                        </div>
+                     </div>
+                     <div class="item">
+                        <img src="images/microscope-crop1.JPG" class="carousel-image" alt="">
+                        <div class="carousel-caption">
+                           <h4>Lab Photos</h4>
+                           <p></p>
+                        </div>
+                     </div>
+                     <div class="item">
+                        <img src="images/building-crop1.JPG" class="carousel-image" alt="">
+                        <div class="carousel-caption">
+                           <h4>Main Building Photo</h4>
+                           <p></p>
+                        </div>
+                     </div>
+                  </div>
+                  <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
+                  <a class="right carousel-control" href="#main-carousel" data-slide="next">›</a>
+               </div>
+            </div>
+         </div>
          <hr>
          <div class="container-fluid">
             <div class="row-fluid marketing">
@@ -50,18 +81,52 @@
                   <br/>
                </div>
                <div class="row-fluid">
-                   <p><b>Links: <a href="http://life.hust.edu.cn/">生命科学与技术学院官网</a>,  <a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a>,<a href="https://www.cnki.net/">中国知网</a>，<a href="http://s.ilab.cn/login.jsp">iLab订购平台</a></b></p>
+                  <hr>
+                  <h2 class="centered">Recent News</h2>
+                  <hr>
                </div>
-               <div class="row-fluid">
-                  <h3>News</h3>
-                  <div class="span7">
-                     <ul>
-                     <li>实验室网站上线啦</li>
-                     </ul>
+               <div class="span4 feature-item">
+                  <h5> <span class="date"> May 1, 2019 </span> </h5>
+                  <h4 class="feature-heading">
+                     <a href="https://unsplash.com/photos/CPmrdbbpnXg">
+                     Students pose for conference lacus luctus accumsan tortor posuere
+                     </a>
+                     <br/>
+                  </h4>
+                  <hr>
+                  <div class="centered">
+                     <a href="https://unsplash.com/photos/CPmrdbbpnXg">
+                     <img src="thumbs/jerry-zhang-1281608-unsplash.jpg" alt=""></a>
                   </div>
-                  <div class="span4">
-                     <a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/SteveQinEmory?ref_src=twsrc%5Etfw">Tweets by SteveQinEmory</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                  <hr>
+                  <p>
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                     dolore magna aliqua. 
+                     Find the proceedings <a href="https://unsplash.com/photos/CPmrdbbpnXg">here</a>.
+                  </p>
+                  <br/>
+                  <br/>
+               </div>
+               <div class="span4 feature-item">
+                  <h5> <span class="date">April 20, 2019</span> </h5>
+                  <h4 class="feature-heading">
+                     <a href="https://unsplash.com/photos/rTZW4f02zY8">
+                     Tincidunt tortor aliquam nulla facilisi. Nunc scelerisque viverra mauris in
+                     </a>
+                  </h4>
+                  <hr>
+                  <div class="centered">
+                     <a href="https://unsplash.com/photos/rTZW4f02zY8">
+                     <img src="thumbs/nasa-89125-unsplash.jpg" alt="">
+                     </a>
                   </div>
+                  <hr>
+                  <p>
+                     Read the paper 
+                     <a href="https://unsplash.com/photos/rTZW4f02zY8">here</a>.
+                     Consequat semper viverra nam libero justo laoreet. Commodo odio aenean sed adipiscing diam donec. 
+                  </p>
+                  <br/>
                </div>
             </div>
             </div>
