--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                </div>
                <div class="row-fluid">
                   <hr>
-                  <h2 class="centered">Recent News</h2>
+                  <h2 class="centered">近期新闻</h2>
                   <hr>
                </div>
                <div class="span4 feature-item">
