--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   </div>
                   <hr>
                   <p>
-                      实验室成员集体秋游，到东湖团建
+                      实验室的成员集体秋游，到东湖团建
                   </p>
                   <br/>
                </div>
