--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-         </header>
+         </header>o
          <div class="masthead">
             <div class="navbar">
                <div class="navbar-inner">
@@ -51,6 +51,22 @@
                <section id="2021">
                   <h3>2021</h3>
                   <br/>
+                  
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7922366/" class="thumbnail">
+                        <img class="publications-thumb" src="thumbs/Guo-paper.jpg" alt="guo-paper"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7922366/">Genetic and Chemical Engineering of Phages for Controlling Multidrug-Resistant Bacteria</a>
+                        <br/>
+                        <br/>
+                        <p>Guo D, Chen J, Zhao X, Luo Y, Jin M, Fan F, Park C, Yang X, Sun C, Yan J, Chen W, Liu Z.<br/>Antibiotics (Basel). 2021 Feb 19;10(2):202.<br/>doi: 10.3390/antibiotics10020202. PMID: 33669513</p>
+                        <p><b><a href="file/Genetic and Chemical Engineering of Phages for Controlling Multidrug-Resistant Bacteria.pdf">Download</a> </b></p>
+                     </div>
+                  </div>
+                  <hr>
                   <div class="row-fluid">
                      <div class="span3">
                         <a href="http://naturescholars.com/gjmic.0201/" class="thumbnail">
