--- a/people.html
+++ b/people.html
@@ -235,7 +235,7 @@
                   <hr>
                   <div class="row-fluid">
                      <div class="span3">
-                        <img src="thumbs/dengyun.jpg" alt="邓云"/>
+                        <img src="thumbs/2.jpg" alt="邓云"/>
                      </div>
                      <div class="span9">
                          
