--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li class="active"><a href="#">主页</a></li>
                         <li><a href="people.html">成员</a></li>
                         <li><a href="research.html">研究</a></li>
-                        <li><a href="publications.html">发表文献</a></li>
+                        <li><a href="publications.html">文献</a></li>
                         <li><a href="gallery.html">风采</a></li>
                         <li><a href="software.html">常用链接</a></li>
                         <li><a href="teaching.html">实验室资源</a></li>
@@ -117,7 +117,7 @@
                   </div>
                   <hr>
                   <p>
-                      实验室的成员集体秋游，到森林公园团建
+                      实验室成员集体秋游（森林公园团建）
                   </p>
                   <br/>
                </div>
