--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
                         <li><a href="index.html">主页</a></li>
                         <li><a href="people.html">成员</a></li>
                         <li><a href="research.html">研究</a></li>
-                        <li><a href="publications.html">发表文献</a></li>
+                        <li><a href="publications.html">文献</a></li>
                         <li class="active"><a href="gallery.html">风采</a></li>
                         <li><a href="software.html">常用链接</a></li>
                         <li><a href="teaching.html">实验室资源</a></li>
