--- a/people.html
+++ b/people.html
@@ -23,7 +23,7 @@
 			<li><a href="index.html">主页</a></li>
 			<li class="active"><a href="#">成员</a></li>
 			<li><a href="research.html">研究</a></li>
-			<li><a href="publications.html">发表文献</a></li>
+			<li><a href="publications.html">文献</a></li>
 			<li><a href="gallery.html">风采</a></li>
          <li><a href="software.html">常用链接</a></li>
          <li><a href="teaching.html">实验室资源</a></li>
@@ -38,7 +38,7 @@
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
                   <li><a href="#principalinvestigator"> 导师 </a></li>
-                  <li><a href="#Postdoctor">博士后及助理</a></li>
+                  <li><a href="#Postdoctor">实验室助理</a></li>
                   <li><a href="#phd">博士研究生</a></li>
                   <li><a href="#master">硕士研究生</a></li>
                   <li><a href="#alumni">已毕业学生</a></li>
@@ -59,7 +59,7 @@
                         <p>华中科技大学生命科学与技术学院博士生导师</p>
                         <ul>
 			               </ul>
-                        <p>2005年- 2014年University of Pennsylvania  微生物学访问学者、博士后、研究助理<br/>2014年- 2016年中国农业科学院研究员<br/>2016年-  华中科技大学生命科学与技术学院教授</p>
+                        <p>2005-2014 University of Pennsylvania  微生物学访问学者、博士后、研究助理<br/>2014-2016 中国农业科学院研究员<br/>2016-  华中科技大学生命科学与技术学院教授</p>
                         <p><b>电话: </b>027-87001156 </p>
                         <p><b>传真: </b>027-87001156 </p>
                         <p><b>电子邮箱: </b><a href="mailto:zhiliu@hust.edu.cn">zhiliu@hust.edu.cn</a></p>
@@ -70,28 +70,6 @@
                <hr>
                <section id="Postdoctor">
                   <div class="page-header">
-                     <h3>博士后</h3>
-                  </div>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <img src="thumbs/hujun.jpg" alt="胡俊"/>
-                     </div>
-                     <div class="span9">
-                        <p><b>胡俊</b></p>
-                         
-                     </div>
-                  </div>
-                  <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <img src="thumbs/mayao.jpg" alt="马遥"/>
-                     </div>
-                     <div class="span9">
-                         
-                        <p><b>马遥</a></p>
-                     </div>
-                  </div>
-                  <hr>
                   <div class="row-fluid">
                      <div class="span3">
                         <img src="thumbs/2.jpg" alt="张婧"/>
