--- a/publications.html
+++ b/publications.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>发表文献</title>
+      <title>文献</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Liu Lab,Publications,HUST">
       <meta name="author" content="">
@@ -23,7 +23,7 @@
                         <li><a href="index.html">主页</a></li>
                         <li><a href="people.html">成员</a></li>
                         <li><a href="research.html">研究</a></li>
-                        <li class="active"><a href="#">发表文献</a></li>
+                        <li class="active"><a href="#">文献</a></li>
                         <li><a href="gallery.html">风采</a></li>
                         <li><a href="software.html">常用链接</a></li>
                         <li><a href="teaching.html">实验室资源</a></li>
